--- a/Teebay/Product/View/Storyboard/Product.storyboard
+++ b/Teebay/Product/View/Storyboard/Product.storyboard
@@ -26,6 +26,10 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="XZn-IM-K13">
                                 <rect key="frame" x="20" y="172" width="353" height="552"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="Y6W-OH-hqX" id="9YB-o1-q3Z"/>
+                                    <outlet property="delegate" destination="Y6W-OH-hqX" id="6FV-g6-xO7"/>
+                                </connections>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rKi-9X-o4T">
                                 <rect key="frame" x="353" y="744" width="20" height="20"/>
@@ -36,6 +40,9 @@
                                 <color key="tintColor" systemColor="systemGreenColor"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" image="plus.circle" catalog="system"/>
+                                <connections>
+                                    <action selector="onTappedAddButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="GDi-EZ-Wu8"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
@@ -52,6 +59,10 @@
                             <constraint firstItem="XZn-IM-K13" firstAttribute="top" secondItem="eTx-dQ-RNG" secondAttribute="bottom" constant="20" id="zrb-Z8-Zzk"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="addButton" destination="rKi-9X-o4T" id="1Qx-hu-twj"/>
+                        <outlet property="tableView" destination="XZn-IM-K13" id="QWZ-wY-udU"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
