--- a/Teebay/Product/View/Storyboard/Product.storyboard
+++ b/Teebay/Product/View/Storyboard/Product.storyboard
@@ -86,17 +86,17 @@
                             <stackView opaque="NO" contentMode="scaleToFill" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="VpK-Gj-5ol">
                                 <rect key="frame" x="20" y="138" width="353" height="572"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="oUf-88-pJd">
-                                        <rect key="frame" x="0.0" y="240.33333333333329" width="353" height="91.666666666666657"/>
+                                    <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="oUf-88-pJd">
+                                        <rect key="frame" x="0.0" y="240.33333333333329" width="40" height="91.666666666666657"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select a title for your product" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4tg-ap-QBw">
-                                                <rect key="frame" x="20" y="8.0000000000000018" width="313" height="21.666666666666671"/>
+                                                <rect key="frame" x="20" y="8.0000000000000018" width="0.0" height="21.666666666666671"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tZl-qH-wXQ">
-                                                <rect key="frame" x="20" y="49.666666666666686" width="313" height="34"/>
+                                                <rect key="frame" x="20" y="49.666666666666686" width="0.0" height="34"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                                 <connections>
@@ -121,27 +121,37 @@
                                                 <state key="normal" title="Select a Category" image="arrowshape.down" catalog="system">
                                                     <color key="titleColor" systemColor="labelColor"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="onTappedCategoryButton:" destination="VwB-CE-va1" eventType="touchUpInside" id="3hu-1z-u3Q"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
-                                    <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Uvq-yt-Rkx">
-                                        <rect key="frame" x="0.0" y="201.33333333333331" width="0.0" height="169.66666666666669"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Uvq-yt-Rkx">
+                                        <rect key="frame" x="0.0" y="201.33333333333331" width="353" height="169.66666666666669"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l9j-aq-Dv1">
-                                                <rect key="frame" x="0.0" y="0.0" width="0.0" height="21.666666666666668"/>
+                                                <rect key="frame" x="97.666666666666686" y="0.0" width="158" height="21.666666666666668"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ViP-rM-qR8">
-                                                <rect key="frame" x="0.0" y="41.666666666666686" width="0.0" height="128"/>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                                <rect key="frame" x="20" y="41.666666666666686" width="313" height="128"/>
+                                                <color key="backgroundColor" systemColor="systemGray6Color"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="128" id="q9y-KM-qec"/>
+                                                </constraints>
                                                 <color key="textColor" systemColor="labelColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                             </textView>
                                         </subviews>
+                                        <constraints>
+                                            <constraint firstItem="ViP-rM-qR8" firstAttribute="top" secondItem="l9j-aq-Dv1" secondAttribute="bottom" constant="20" id="FR7-3Z-yfg"/>
+                                            <constraint firstAttribute="trailing" secondItem="ViP-rM-qR8" secondAttribute="trailing" constant="20" id="L8W-zR-xeF"/>
+                                            <constraint firstItem="ViP-rM-qR8" firstAttribute="leading" secondItem="Uvq-yt-Rkx" secondAttribute="leading" constant="20" id="NCw-Y3-eRh"/>
+                                        </constraints>
                                     </stackView>
                                     <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="w1g-OA-rVB">
                                         <rect key="frame" x="0.0" y="217.33333333333331" width="0.0" height="137.66666666666669"/>
@@ -337,11 +347,13 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="backButton" destination="DKj-xG-WSm" id="dsx-BC-CJi"/>
                         <outlet property="categoryLabel" destination="xel-2j-YOO" id="S1R-5u-Ntp"/>
                         <outlet property="categoryStackview" destination="vs5-ld-eli" id="5ob-Ro-72j"/>
                         <outlet property="descriptionLabel" destination="Daf-KL-7gd" id="fiD-kp-BaL"/>
                         <outlet property="descriptionStackview" destination="Uvq-yt-Rkx" id="mRx-NL-OwL"/>
                         <outlet property="descriptionTExtview" destination="ViP-rM-qR8" id="P2U-Xe-8LB"/>
+                        <outlet property="nextButton" destination="M8t-JD-bhs" id="MgV-2u-10k"/>
                         <outlet property="perDayButton" destination="fIW-8y-cge" id="vuJ-rM-A4h"/>
                         <outlet property="perHourButton" destination="4I3-m4-Ech" id="YUf-Ty-McQ"/>
                         <outlet property="priceLabel" destination="sWr-N1-yCb" id="xMt-t7-V7Y"/>
@@ -377,6 +389,9 @@
         </systemColor>
         <systemColor name="systemGray5Color">
             <color red="0.8980392157" green="0.8980392157" blue="0.91764705879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGray6Color">
+            <color red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGreenColor">
             <color red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
