--- a/Teebay/Product/View/Cell/ProductTVC.xib
+++ b/Teebay/Product/View/Cell/ProductTVC.xib
@@ -18,37 +18,37 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="q2c-Hj-kZN">
-                        <rect key="frame" x="0.0" y="0.0" width="447" height="272"/>
+                        <rect key="frame" x="8" y="16" width="431" height="240"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="aAT-XR-4kh">
-                                <rect key="frame" x="0.0" y="0.0" width="447" height="153.66666666666666"/>
+                                <rect key="frame" x="0.0" y="0.0" width="401" height="153.66666666666666"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fkI-Vk-2Qm">
-                                        <rect key="frame" x="16" y="16" width="415" height="21.666666666666671"/>
+                                        <rect key="frame" x="16" y="16" width="369" height="21.666666666666671"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vay-Rr-Sgw">
-                                        <rect key="frame" x="16" y="45.666666666666664" width="415" height="17"/>
+                                        <rect key="frame" x="16" y="45.666666666666664" width="369" height="17"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nXq-YO-COX">
-                                        <rect key="frame" x="16" y="70.666666666666671" width="415" height="17"/>
+                                        <rect key="frame" x="16" y="70.666666666666671" width="369" height="17"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xb2-ht-j5q">
-                                        <rect key="frame" x="16" y="95.666666666666671" width="415" height="17"/>
+                                        <rect key="frame" x="16" y="95.666666666666671" width="369" height="17"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="z1T-Hc-s1f">
-                                        <rect key="frame" x="16" y="120.66666666666669" width="415" height="17"/>
+                                        <rect key="frame" x="16" y="120.66666666666666" width="369" height="17"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ang-TL-gFM">
                                                 <rect key="frame" x="0.0" y="0.0" width="35.333333333333336" height="17"/>
@@ -57,7 +57,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SRb-KV-QA1">
-                                                <rect key="frame" x="379.66666666666669" y="0.0" width="35.333333333333314" height="17"/>
+                                                <rect key="frame" x="333.66666666666669" y="0.0" width="35.333333333333314" height="17"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
@@ -67,21 +67,41 @@
                                 </subviews>
                                 <edgeInsets key="layoutMargins" top="16" left="16" bottom="16" right="16"/>
                             </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="fTW-hB-KDB">
+                                <rect key="frame" x="401" y="0.0" width="30" height="30"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qbz-5S-CNb">
+                                        <rect key="frame" x="0.0" y="8" width="22" height="22"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="22" id="EeO-yg-axF"/>
+                                            <constraint firstAttribute="height" constant="22" id="ZSU-bC-q7w"/>
+                                        </constraints>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" image="Delete"/>
+                                        <connections>
+                                            <action selector="onTappedDeleteButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="raX-gt-gFQ"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <edgeInsets key="layoutMargins" top="8" left="0.0" bottom="0.0" right="8"/>
+                            </stackView>
                         </subviews>
                     </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="q2c-Hj-kZN" secondAttribute="bottom" id="7XZ-ZG-zrx"/>
-                    <constraint firstItem="q2c-Hj-kZN" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="KlB-Cl-aN9"/>
-                    <constraint firstItem="q2c-Hj-kZN" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Wcq-03-DFT"/>
-                    <constraint firstAttribute="trailing" secondItem="q2c-Hj-kZN" secondAttribute="trailing" id="mcN-e7-1Dd"/>
+                    <constraint firstAttribute="bottom" secondItem="q2c-Hj-kZN" secondAttribute="bottom" constant="16" id="7XZ-ZG-zrx"/>
+                    <constraint firstItem="q2c-Hj-kZN" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="KlB-Cl-aN9"/>
+                    <constraint firstItem="q2c-Hj-kZN" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="Wcq-03-DFT"/>
+                    <constraint firstAttribute="trailing" secondItem="q2c-Hj-kZN" secondAttribute="trailing" constant="8" id="mcN-e7-1Dd"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="categoryLabel" destination="Vay-Rr-Sgw" id="NPC-e0-C6x"/>
                 <outlet property="dateLabel" destination="ang-TL-gFM" id="2nT-cN-cXW"/>
+                <outlet property="deleteButton" destination="qbz-5S-CNb" id="6KO-mO-XPH"/>
                 <outlet property="descriptionLAbel" destination="xb2-ht-j5q" id="BrD-R3-z6K"/>
+                <outlet property="parentStackview" destination="q2c-Hj-kZN" id="pKA-Oy-GNx"/>
                 <outlet property="priceLabel" destination="nXq-YO-COX" id="UCo-7T-bt9"/>
                 <outlet property="productNameLabel" destination="fkI-Vk-2Qm" id="X9C-DI-GpI"/>
                 <outlet property="viewLabel" destination="SRb-KV-QA1" id="zhH-Kl-m4Z"/>
@@ -89,4 +109,7 @@
             <point key="canvasLocation" x="139.69465648854961" y="104.22535211267606"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="Delete" width="21" height="21"/>
+    </resources>
 </document>
