--- a/Teebay/Product/View/Storyboard/Product.storyboard
+++ b/Teebay/Product/View/Storyboard/Product.storyboard
@@ -18,13 +18,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Products" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eTx-dQ-RNG">
-                                <rect key="frame" x="20" y="118" width="353" height="34"/>
+                                <rect key="frame" x="20" y="118" width="353" height="43"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="XZn-IM-K13">
-                                <rect key="frame" x="20" y="172" width="353" height="532"/>
+                                <rect key="frame" x="20" y="181" width="353" height="523"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <connections>
                                     <outlet property="dataSource" destination="Y6W-OH-hqX" id="9YB-o1-q3Z"/>
@@ -44,10 +44,21 @@
                                     <action selector="onTappedAddButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="GDi-EZ-Wu8"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tCl-fS-Xj5">
+                                <rect key="frame" x="302" y="118" width="71" height="22"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="blinds.horizontal.open" catalog="system"/>
+                                <connections>
+                                    <action selector="onTappedMenuButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="ANY-uj-K2B"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="tCl-fS-Xj5" secondAttribute="trailing" constant="20" id="3ox-rW-MyK"/>
+                            <constraint firstItem="XZn-IM-K13" firstAttribute="top" secondItem="tCl-fS-Xj5" secondAttribute="bottom" constant="41" id="430-Ze-Md6"/>
+                            <constraint firstItem="tCl-fS-Xj5" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="5fs-sB-Z1U"/>
                             <constraint firstItem="rKi-9X-o4T" firstAttribute="top" secondItem="XZn-IM-K13" secondAttribute="bottom" constant="20" id="7bT-Cd-Sqn"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="rKi-9X-o4T" secondAttribute="trailing" constant="40" id="OJW-9U-AtO"/>
                             <constraint firstAttribute="trailing" secondItem="eTx-dQ-RNG" secondAttribute="trailing" constant="20" id="XG7-i2-d4J"/>
@@ -55,12 +66,15 @@
                             <constraint firstItem="XZn-IM-K13" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="fxh-vu-TNJ"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="rKi-9X-o4T" secondAttribute="bottom" constant="20" id="loc-PR-S2b"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="XZn-IM-K13" secondAttribute="trailing" constant="20" id="oNS-77-YCC"/>
+                            <constraint firstItem="tCl-fS-Xj5" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="302" id="rJf-qv-TiS"/>
                             <constraint firstItem="eTx-dQ-RNG" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="y0O-HK-OLh"/>
                             <constraint firstItem="XZn-IM-K13" firstAttribute="top" secondItem="eTx-dQ-RNG" secondAttribute="bottom" constant="20" id="zrb-Z8-Zzk"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="addButton" destination="rKi-9X-o4T" id="1Qx-hu-twj"/>
+                        <outlet property="menuButton" destination="tCl-fS-Xj5" id="09j-mA-WXv"/>
+                        <outlet property="pageTitle" destination="eTx-dQ-RNG" id="TIc-aE-aRA"/>
                         <outlet property="tableView" destination="XZn-IM-K13" id="QWZ-wY-udU"/>
                     </connections>
                 </viewController>
@@ -106,19 +120,19 @@
                                         </subviews>
                                         <edgeInsets key="layoutMargins" top="8" left="20" bottom="8" right="20"/>
                                     </stackView>
-                                    <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="vs5-ld-eli">
-                                        <rect key="frame" x="0.0" y="255.00000000000003" width="0.0" height="62.333333333333343"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="vs5-ld-eli">
+                                        <rect key="frame" x="0.0" y="255.00000000000003" width="353" height="62.333333333333343"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select Categories" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fy3-U6-2gI">
-                                                <rect key="frame" x="0.0" y="0.0" width="0.0" height="20.333333333333332"/>
+                                                <rect key="frame" x="104.33333333333333" y="0.0" width="144.66666666666669" height="20.333333333333332"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wvS-fv-0aI">
-                                                <rect key="frame" x="0.0" y="40.333333333333314" width="0.0" height="22"/>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wvS-fv-0aI">
+                                                <rect key="frame" x="96.666666666666671" y="40.333333333333314" width="159.66666666666663" height="22"/>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                                <state key="normal" title="Select a Category" image="arrowshape.down" catalog="system">
+                                                <state key="normal" title="Select a Category" image="arrowtriangle.down" catalog="system">
                                                     <color key="titleColor" systemColor="labelColor"/>
                                                 </state>
                                                 <connections>
@@ -153,17 +167,17 @@
                                             <constraint firstItem="ViP-rM-qR8" firstAttribute="leading" secondItem="Uvq-yt-Rkx" secondAttribute="leading" constant="20" id="NCw-Y3-eRh"/>
                                         </constraints>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="w1g-OA-rVB">
-                                        <rect key="frame" x="0.0" y="197" width="353" height="178"/>
+                                    <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="w1g-OA-rVB">
+                                        <rect key="frame" x="0.0" y="197" width="0.0" height="178"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Upload  Product Picture" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hW9-xh-7yR">
-                                                <rect key="frame" x="74.333333333333329" y="0.0" width="204.33333333333337" height="21.666666666666668"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="0.0" height="21.666666666666668"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OBY-Ou-c0l">
-                                                <rect key="frame" x="61.666666666666686" y="41.666666666666686" width="230" height="38"/>
+                                                <rect key="frame" x="0.0" y="41.666666666666686" width="0.0" height="38"/>
                                                 <color key="backgroundColor" red="0.34509803919999998" green="0.26274509800000001" blue="0.91372549020000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <inset key="contentEdgeInsets" minX="8" minY="8" maxX="8" maxY="8"/>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
@@ -173,7 +187,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cGd-rh-8a5">
-                                                <rect key="frame" x="59" y="99.666666666666686" width="235" height="38"/>
+                                                <rect key="frame" x="0.0" y="99.666666666666686" width="0.0" height="38"/>
                                                 <color key="backgroundColor" red="0.34509803919999998" green="0.26274509800000001" blue="0.91372549020000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <inset key="contentEdgeInsets" minX="8" minY="8" maxX="8" maxY="8"/>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
@@ -183,10 +197,10 @@
                                                 </connections>
                                             </button>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="19" translatesAutoresizingMaskIntoConstraints="NO" id="Oab-rm-UEa">
-                                                <rect key="frame" x="128.66666666666666" y="157.66666666666669" width="96" height="20.333333333333343"/>
+                                                <rect key="frame" x="0.0" y="157.66666666666669" width="0.0" height="20.333333333333343"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Image Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HW7-ql-BOz">
-                                                        <rect key="frame" x="0.0" y="0.0" width="96" height="20.333333333333332"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="0.0" height="20.333333333333332"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
@@ -627,8 +641,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="arrowshape.down" catalog="system" width="123" height="128"/>
         <image name="arrowtriangle.down" catalog="system" width="128" height="120"/>
+        <image name="blinds.horizontal.open" catalog="system" width="128" height="112"/>
         <image name="plus" width="512" height="512"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
