fix: decimal keypad enabled for price

--- a/Teebay/Auth/View/Storyboard/Auth.storyboard
+++ b/Teebay/Auth/View/Storyboard/Auth.storyboard
@@ -151,7 +151,7 @@
                                                                     <constraint firstAttribute="height" constant="40" id="jsa-sF-ye2"/>
                                                                 </constraints>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                                <textInputTraits key="textInputTraits"/>
+                                                                <textInputTraits key="textInputTraits" textContentType="new-password"/>
                                                             </textField>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Error" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4pE-SK-2ND">
                                                                 <rect key="frame" x="0.0" y="39.999999999999943" width="313" height="14.333333333333336"/>
@@ -170,7 +170,7 @@
                                                                     <constraint firstAttribute="height" constant="40" id="dwm-fs-6xw"/>
                                                                 </constraints>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                                <textInputTraits key="textInputTraits"/>
+                                                                <textInputTraits key="textInputTraits" textContentType="password"/>
                                                             </textField>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Error" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v7c-IA-VWc">
                                                                 <rect key="frame" x="0.0" y="40" width="313" height="14.333333333333336"/>
@@ -320,7 +320,7 @@
                                                                             <constraint firstAttribute="height" constant="40" id="KQ2-cM-Jjq"/>
                                                                         </constraints>
                                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                                        <textInputTraits key="textInputTraits"/>
+                                                                        <textInputTraits key="textInputTraits" textContentType="password"/>
                                                                     </textField>
                                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Error" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ES9-lk-y8e">
                                                                         <rect key="frame" x="0.0" y="40" width="297" height="14.333333333333336"/>
